[package]

name = "mydht"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[[bin]]
name = 'dhtmain'
doc = false

[[example]]
name='fileshare'
path = "examples/fs.rs"

[dependencies]

log = "0.3.1"
env_logger = "0.3.0"
uuid = "0.1.17"
num = "0.1.24"
rand = "0.3.8"
openssl = "0.6.2"
rust-crypto = "0.2.31"
#bencode = "0.1.10"
bincode = "0.2.2"
rustc-serialize = "0.3.14"
time = "0.1.25"
byteorder = "0.3.9"

#[dependencies.semver]
#git = "https://github.com/...."

#[dependencies.protobuf]
#git = "https://github.com/stepancheg/rust-protobuf.git"

#[dependencies.capnp]
#git = "https://github.com/dwrensha/capnproto-rust.git"

#[dependencies.rust-crypto]
#git = "https://github.com/DaGenix/rust-crypto"



[dependencies.dht]
#path = "../mydht-dep/rust-dht/"
git = "https://github.com/cheme/rust-dht.git"

#[dependencies.time]
#git = "https://github.com/rust-lang/time.git"

#[dependencies.rustc-serialize]
#git = "https://github.com/rust-lang/rustc-serialize.git"

#[dependencies.bencode]
#git = "https://github.com/arjantop/rust-bencode.git"
#git = "https://github.com/cheme/rust-bencode.git"
#path = "../mydht-dep/rust-bencode/"

#[dependencies.bincode]
#git = "https://github.com/TyOverby/bincode.git"
#path = "../mydht-dep/bincode/"
