[package]

name = "mydht"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

#[[bin]]
#name = 'dhtmain'
#doc = false

#[[example]]
#name='fileshare'
#path = "examples/fs.rs"



[features]
#default = ["striple-impl","openssl-impl","rust-crypto-impl","mio-impl"]
default = ["striple-impl","rust-crypto-impl","with-extra-test","mio-impl","openssl-impl"]
striple-impl = ["striple"]
openssl-impl = ["openssl"]
rust-crypto-impl = ["rust-crypto"]
mio-impl = ["mio","coroutine"]
with-extra-test = []

[dependencies]
log = "0.3.1"
env_logger = "0.3.1"
uuid = "0.1.17"
num = "0.1.25"
rand = "0.3.8"
bincode = "0.3.0"
rustc-serialize = "0.3.15"
time = "0.1.31"
byteorder = "0.3.11"
#bit-vec = "0.4.1"

[dependencies.bit-vec]
git = "https://github.com/cheme/bit-vec.git"

[dependencies.mio]
version = "0.4.1"
#git = "https://github.com/carllerche/mio.git"
optional = true

[dependencies.coroutine]
version = "0.3.2"
#git = "https://github.com/rustcc/coroutine-rs.git"
optional = true


[dependencies.openssl]
version = "0.6.4"
optional = true

[dependencies.rust-crypto]
version = "0.2.31"
optional = true

[dependencies.striple]
version = "0.0.1"
git = "https://github.com/cheme/rust-striple.git"
#path = "../rust-striple/"
optional = true
features = ["public_crypto","serialize","public_openssl","cryptoecdsa","opensslrsa","opensslpbkdf2"]




#[dependencies.protobuf]
#git = "https://github.com/stepancheg/rust-protobuf.git"

#[dependencies.capnp]
#git = "https://github.com/dwrensha/capnproto-rust.git"

#[dependencies.rust-crypto]
#git = "https://github.com/DaGenix/rust-crypto"

#[dependencies.time]
#git = "https://github.com/rust-lang/time.git"

#[dependencies.rustc-serialize]
#git = "https://github.com/rust-lang/rustc-serialize.git"

