[package]

name = "mydht"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
#default = ["openssl-impl","rust-crypto-impl","mio-impl"]
default = ["rust-crypto-impl","with-extra-test","openssl-impl"]
#default = ["rust-crypto-impl","mio-impl","openssl-impl"]
openssl-impl = ["openssl"]
rust-crypto-impl = ["rust-crypto"]
mio-impl = ["mio","coroutine"]
with-extra-test = []

[dependencies]
log = "0.3.2"
env_logger = "0.3.1"
uuid = "0.1.18"
num = "0.1.27"
rand = "0.3.11"
bincode = "0.4.0"
rustc-serialize = "0.3.16"
time = "0.1.33"
byteorder = "0.3.13"
#bit-vec = "0.4.2"
vec_map = "0.3.0"

[dependencies.mydht-base]
#path = "../mydht-base/"
git = "https://github.com/cheme/mydht-base.git"

[dev-dependencies.mydht-basetest]
#path = "../mydht-basetest/"
git = "https://github.com/cheme/mydht-basetest.git"

[dev-dependencies.mydht-inefficientmap]
#path = "../mydht-inefficientmap/"
git = "https://github.com/cheme/mydht-inefficientmap.git"

[dev-dependencies.mydht-tcp]
#path = "../mydht-tcp/"
git = "https://github.com/cheme/mydht-tcp.git"

[dev-dependencies.mydht-udp]
#path = "../mydht-udp/"
git = "https://github.com/cheme/mydht-udp.git"


[dependencies.bit-vec]
git = "https://github.com/cheme/bit-vec.git"

[dependencies.mio]
version = "0.4.1"
#git = "https://github.com/carllerche/mio.git"
optional = true

[dependencies.coroutine]
git = "https://github.com/cheme/coroutine-rs.git"
#path = "../../mydht-dep/coroutine-rs/"
optional = true


[dependencies.openssl]
version = "0.6.7"
optional = true

[dependencies.rust-crypto]
version = "0.2.33"
optional = true




#[dependencies.protobuf]
#git = "https://github.com/stepancheg/rust-protobuf.git"

#[dependencies.capnp]
#git = "https://github.com/dwrensha/capnproto-rust.git"

#[dependencies.rust-crypto]
#git = "https://github.com/DaGenix/rust-crypto"

#[dependencies.time]
#git = "https://github.com/rust-lang/time.git"

#[dependencies.rustc-serialize]
#git = "https://github.com/rust-lang/rustc-serialize.git"

[dev-dependencies.mydht-bincode] # for udp test
#path = "../mydht-bincode/"
git = "https://github.com/cheme/mydht-bincode.git"


