[package]

name = "mydht-base"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
default = ["with-extra-test","rust-crypto"]
openssl-impl = ["openssl"]
rust-crypto-impl = ["rust-crypto"]
with-extra-test = []
nightly = []

[dependencies]
log = "~0.3.4"
#env_logger = "~0.4.3"
#uuid = "~0.5.1"
num = "~0.1.27"
rand = "~0.3.11"
bincode = "~0.8.0"
serde = { version = "~1.0.10", features = ["rc"]}
serde_derive = "~1.0.10"
serde_json = "~1.0.2"
time = "~0.1.33"
byteorder = "~1.1.0"
mio = "~0.6.10"
#bit-vec = "~0.4.2"
#vec_map = "~0.8.0"

coroutine = "~0.8.0"
spin = "~0.4.5"
futures = "~0.1.15"
futures-cpupool = "~0.1.5"

[dependencies.bit-vec]
git = "https://github.com/cheme/bit-vec.git"

[dependencies.readwrite-comp]
#path = "../../../readwrite-comp/"
git = "https://github.com/cheme/readwrite-comp.git"

[dependencies.openssl] # currently only for hash_default... TODO rem
version = "~0.9.15"
optional = true

[dependencies.rust-crypto]
version = "~0.2.34"
optional = true

#[dependencies.striple]
#version = "~0.0.1"
#git = "https://github.com/cheme/rust-striple.git"
#path = "../../../rust-striple/"
#optional = true
#features = ["public_crypto","serialize","public_openssl","cryptoecdsa","opensslrsa","opensslpbkdf2"]




#[dependencies.protobuf]
#git = "https://github.com/stepancheg/rust-protobuf.git"

#[dependencies.capnp]
#git = "https://github.com/dwrensha/capnproto-rust.git"

#[dependencies.rust-crypto]
#git = "https://github.com/DaGenix/rust-crypto"

#[dependencies.time]
#git = "https://github.com/rust-lang/time.git"

#[dependencies.rustc-serialize]
#git = "https://github.com/rust-lang/rustc-serialize.git"


