[package]

name = "mydht-base"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
default = ["with-extra-test"]
with-extra-test = []
blocking-transport = []
with-coroutine = ["coroutine"]
mio-transport = ["mio"]
nightly = []

[dependencies]
log = "~0.3.4"
#env_logger = "~0.4.3"
uuid = "~0.6.1"
rand = "~0.3.11"
bincode = "~0.8.0"
serde = { version = "~1.0.10", features = ["rc"]}
serde_derive = "~1.0.10"
serde_json = "~1.0.2"
byteorder = "~1.1.0"
#bit-vec = "~0.4.2"
#vec_map = "~0.8.0"

parking_lot = "~0.4.6"
futures = "~0.1.15"
futures-cpupool = "~0.1.5"

[target.'cfg(not(wasm32))'.dependencies.mio]
version = "~0.6.10"
optional = true

[target.'cfg(not(wasm32))'.dependencies.coroutine]
version = "~0.8.0"
optional = true

[dependencies.bit-vec]
git = "https://github.com/cheme/bit-vec.git"

[dependencies.readwrite-comp]
#path = "../../../readwrite-comp/"
git = "https://github.com/cheme/readwrite-comp.git"


#[dependencies.striple]
#version = "~0.0.1"
#git = "https://github.com/cheme/rust-striple.git"
#path = "../../../rust-striple/"
#optional = true
#features = ["public_crypto","serialize","public_openssl","cryptoecdsa","opensslrsa","opensslpbkdf2"]




#[dependencies.protobuf]
#git = "https://github.com/stepancheg/rust-protobuf.git"

#[dependencies.capnp]
#git = "https://github.com/dwrensha/capnproto-rust.git"

#[dependencies.rust-crypto]
#git = "https://github.com/DaGenix/rust-crypto"

#[dependencies.rustc-serialize]
#git = "https://github.com/rust-lang/rustc-serialize.git"


