[package]

name = "mydht-basetest"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
default = ["with-extra-test"]

with-extra-test = []

[dependencies]
log = "~0.3.4"
#env_logger = "~0.4.3"
#uuid = "~0.5.1"
#num = "~0.1.27"
rand = "~0.3.11"
#bincode = "0.5.0"
time = "~0.1.33"
byteorder = "~1.1.0"
#bit-vec = "~0.4.2"
#vec_map = "~0.8.0"
serde = { version = "~1.0.10", features = ["rc"]}
serde_derive = "~1.0.10"
serde_json = "~1.0.2"
mio = "~0.6.10"
slab = "~0.4.0"
coroutine = "~0.8.0"
futures = "~0.1.15"
futures-cpupool = "~0.1.5"

[dependencies.readwrite-comp]
#path = "../../../readwrite-comp/"
git = "https://github.com/cheme/readwrite-comp.git"

[dependencies.mydht-base]
path = "../mydht-base/"
features = ["blocking-transport","mio-transport"]


[dependencies.bit-vec]
git = "https://github.com/cheme/bit-vec.git"

[dependencies.service-pre]
#version = "~0.0.1"
git = "https://github.com/cheme/service-pre.git"
#path = "../../service-pre/"

