[package]

name = "mydht-bincode"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[features]
default = ["with-extra-test"]
with-extra-test = []

[dependencies]
log = "~0.3.4"
bincode = "~0.8.0"


[dependencies.mydht-base]
path = "../mydht-base/"

[dev-dependencies.mydht-basetest]
path = "../mydht-basetest/"

