[package]

name = "mydht-bincode"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[features]
default = ["with-extra-test"]
with-extra-test = []

[dependencies]
log = "~0.3.4"
bincode = "~0.8.0"
serde = { version = "~1.0.10", features = ["rc"]}


[dependencies.mydht-base]
path = "../mydht-base/"

[dependencies.readwrite-comp]
#path = "../../readwrite-comp/"
git = "https://github.com/cheme/readwrite-comp.git"


[dev-dependencies.mydht-basetest]
path = "../mydht-basetest/"

