[package]

name = "mydht-inefficientmap"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
default = ["with-extra-test"]
with-extra-test = []

[dependencies]
log = "0.3.4"

[dev-dependencies]
num = "0.1.27"
rustc-serialize = "0.3.16"
rand = "0.3.11"

[dev-dependencies.mydht-basetest]
path = "../mydht-basetest/"
#git = "https://github.com/cheme/mydht-basetest.git"



[dependencies.mydht-base]
path = "../mydht-base/"
#git = "https://github.com/cheme/mydht-base.git"

[dependencies.bit-vec]
git = "https://github.com/cheme/bit-vec.git"


