[package]

name = "mydht-openssl"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[feature]
nightly = []

[dependencies]
log = "~0.3.4"
rand = "~0.3.11"

[dependencies.readwrite-comp]
#path = "../readwrite-comp/"
git = "https://github.com/cheme/readwrite-comp.git"

[dependencies.mydht-base]
path = "../mydht-base/"

[dev-dependencies.mydht-basetest]
path = "../mydht-basetest/"

[dependencies.openssl]
version = "~0.7.6"
#path = "../../mydht-dep/rust-openssl/openssl/"
#git = "https://github.com/cheme/rust-openssl.git"
