[package]

name = "mydht-rsapeer"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

#[[bin]]
#name = 'dhtmain'
#doc = false

[features]
default = ["with-extra-test"]
wot = [] #TODO include mydht wot when possible
with-extra-test = []

[dependencies]
rand = "~0.3.11"
bincode = "~0.8.0"
serde = { version = "~1.0.10", features = ["rc"]}
serde_derive = "~1.0.10"
time = "~0.1.33"
mydht-base = { path = "../mydht-base" }
mydht-openssl = { path = "../mydht-openssl" }

openssl = "~0.9.15"



