[package]

name = "mydht-tcp-loop"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
default = ["with-extra-test"]
with-extra-test = []

[dependencies]
log = "~0.3.4"
num = "~0.1.27"
time = "~0.1.33"
byteorder = "~1.1.0"
mio = "~0.6.10"
vec_map = "~0.8.0"


[dependencies.mydht-base]
path = "../mydht-base/"

[dependencies.mydht-basetest]
path = "../mydht-basetest/"

