[package]

name = "mydht-udp"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
default = ["with-extra-test"]
with-extra-test = []

[dependencies]
log = "~0.3.4"
byteorder = "~1.1.0"

[dependencies.mydht-base]
path = "../mydht-base/"
features = ["blocking-transport"]
#git = "https://github.com/cheme/mydht-base.git"



