[package]
name = "mydht-userpoll"
version = "0.1.0"
authors = ["cheme <emericchevalier.pro@gmail.com>"]


[features]

#[dev-dependencies.service-pre]
[dependencies.service-pre]
#version = "~0.0.1"
git = "https://github.com/cheme/service-pre.git"
#path = "../../service-pre/"
features = ["with-coroutine","mio-transport"]

