[package]

name = "mydht-wot"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]


[features]
#default = ["with-extra-test","rust-crypto"]
default = ["with-extra-test","openssl-impl"]
openssl-impl = ["openssl","mydht-openssl"]
striple-impl = ["striple"]
rust-crypto-impl = ["rust-crypto"]
with-extra-test = []

[dependencies]
log = "0.3.4"
#env_logger = "0.3.2"
#uuid = "0.1.18"
num = "0.1.27"
rand = "0.3.11"
bincode = "0.5.0"
rustc-serialize = "0.3.16"
time = "0.1.33"
#byteorder = "0.4.2"
#bit-vec = "0.4.2"
#vec_map = "0.6.0"


[dependencies.mydht-base]
path = "../mydht-base/"
#git = "https://github.com/cheme/mydht-base.git"

[dev-dependencies.mydht-basetest]
path = "../mydht-basetest/"
#git = "https://github.com/cheme/mydht-basetest.git"


[dependencies.rust-crypto]
version = "0.2.34"
optional = true

[dependencies.openssl]
version = "0.7.6"
optional = true

[dependencies.mydht-openssl]
path = "../mydht-openssl/"
#git = "https://github.com/cheme/mydht-openssl.git"
optional = true




[dependencies.striple]
version = "0.0.1"
git = "https://github.com/cheme/rust-striple.git"
#path = "../../rust-striple/"
optional = true
features = ["public_crypto","serialize","public_openssl","cryptoecdsa","opensslrsa","opensslpbkdf2"]



